<resources>
    <string name="app_name">Project Management</string>
    <string name="atachiz02_softwares">Atachiz02 Softwares</string>
    <string name="title">Student Project Management System</string>
    <string name="student">Proceed to Sign Up</string>
    <string name="account">Create Your Account</string>
    <string name="todo">TODO</string>
    <string name="create_account">Create Account</string>
    <string name="signed_up">Already signed up? Click here to login...</string>
    <string name="login">Login to Your Account</string>
    <string name="logIn">Login</string>
    <string name="staff_student">Email Address</string>
    <string name="pin">Pin</string>
    <string name="confirm_pin">Confirm pin</string>
    <string name="name">Student/Staff name</string>
    <string name="sign_up_as">Sign up as</string>
    <string name="create_profile">Create Profile</string>
    <string name="view_approved_topic">View Approved Topic</string>
    <string name="exit">Exit</string>
    <string name="logout">Logout</string>
    <string name="complain">Complain</string>
    <string name="about">About</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="view_approved_topics">View Approved Topics</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="your_name">Name</string>
    <string name="create_your_profile">Create Your Profile</string>
    <string name="id_number">ID number</string>
    <string name="_1st_proposed_project_topic">1st proposed project topic</string>
    <string name="_1st_project_area_of_interest">1st project area of interest</string>
    <string name="_2nd_proposed_project_topic">2nd proposed project topic</string>
    <string name="_2nd_project_area_of_interest">2nd project area of interest</string>
    <string name="_3rd_proposed_project_topic">3rd proposed project topic</string>
    <string name="_3rd_project_area_of_interest">3rd project area of interest</string>
    <string name="working_alone">Working Alone</string>
    <string name="working_in_group">Working in Group</string>
    <string name="area_of_expertise">Area of expertise</string>
    <string name="approve">Approve</string>
    <string name="disapprove">Disapprove</string>
    <string name="possible_supervisor_s">Possible Supervisor(s)</string>
    <string name="student_id_number">Student\'s ID Number</string>
    <string name="third_project_topic">Third Project Topic</string>
    <string name="second_project_topic">Second Project Topic</string>
    <string name="first_project_topic">First Project Topic</string>
    <string name="project_topic">Project Topic</string>
    <string name="reason">Reason for disapproval...</string>
    <string name="supervisor">Supervisor</string>
    <string name="stdent">Student</string>
    <string name="coordinator">Coordinator</string>
    <string name="area_of_interest">Area of Interest</string>
    <string name="possible_supervisors">Possible Supervisor(s)</string>
    <string name="project_status">Project Status</string>
    <string name="approved">Approved</string>
    <string name="view_submitted_topics">View Submitted Topics</string>
    <string name="submitted_topics">Submitted Topics</string>
    <string name="search">Search with ID number</string>
    <string name="created">created</string>
    <string name="mail">email</string>
    <string name="disapproved">Disapproved</string>
    <string name="topic_approved">Topic approved</string>
    <string name="topic_already_approved">Topic already approved!</string>
    <string name="area">area</string>
    <string name="attach">Attach your project...</string>
    <string name="select">Select File</string>
    <string name="submit">Submit File</string>
</resources>