<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/createProfile"
        android:icon="@drawable/baseline_create_24"
        android:title="@string/create_profile" />
    <item
        android:id="@+id/viewFiles"
        android:icon="@drawable/round_file_copy_24"
        android:title="@string/view_files" />
    <item
        android:id="@+id/complain"
        android:icon="@drawable/round_report_problem_24"
        android:title="@string/complain" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/baseline_info_24"
        android:title="@string/about" />
    <group>
        <item android:title="">
            <menu>
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/baseline_logout_24"
                    android:title="@string/logout"
                    android:titleCondensed="" />
                <item
                    android:id="@+id/exit"
                    android:icon="@drawable/baseline_exit_to_app_24"
                    android:title="@string/exit"
                    android:titleCondensed="" />
            </menu>
        </item>
    </group>
</menu>