<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.SignUpActivity">

    <ImageView
        android:id="@+id/signUpIcon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/baseline_school_24" />

    <TextView
        android:id="@+id/signUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpIcon"
        android:layout_centerHorizontal="true"
        android:text="@string/account"
        android:textAlignment="center"
        android:textColor="@color/darkGreen"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/signUpLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpTitle"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/signUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:backgroundTint="@color/green"
            android:hint="@string/staff_student"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/signUpPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:backgroundTint="@color/green"
            android:hint="@string/pin"
            android:inputType="numberPassword" />

        <EditText
            android:id="@+id/signUpConfirmPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:backgroundTint="@color/green"
            android:hint="@string/confirm_pin"
            android:inputType="numberPassword" />

        <EditText
            android:id="@+id/signUpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="name"
            android:backgroundTint="@color/green"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUpRole"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/sign_up_as"
            app:boxStrokeColor="@color/green">

            <AutoCompleteTextView
                android:id="@+id/signUpAs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/signUpLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpLinearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/signed_up"
        android:textSize="16sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/signUpCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/darkGreen"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/atachiz02_softwares"
        android:textColor="@color/darkGreen"
        android:textSize="14sp"
        android:textStyle="italic" />

</RelativeLayout>