<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.SignUpActivity">

    <ImageView
        android:id="@+id/logInIcon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/baseline_login_24" />

    <TextView
        android:id="@+id/logInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logInIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/darkGreen"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/logInLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logInTitle"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/logInID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:backgroundTint="@color/green"
            android:hint="@string/staff_student"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/logInPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="password"
            android:backgroundTint="@color/green"
            android:hint="@string/pin"
            android:inputType="numberPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/logInLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logInLinearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/darkGreen"
        android:text="@string/logIn"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/atachiz02_softwares"
        android:textColor="@color/darkGreen"
        android:textSize="14sp"
        android:textStyle="italic" />

</RelativeLayout>