<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createSupervisorProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.CreateSupervisorProfileActivity">

    <TextView
        android:id="@+id/createSupervisorProfileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/create_your_profile"
        android:textColor="@color/darkGreen"
        android:textSize="30sp" />

    <!--    <de.hdodenhof.circleimageview.CircleImageView-->
    <!--        android:id="@+id/createSupervisorProfileProfilePic"-->
    <!--        android:layout_width="100dp"-->
    <!--        android:layout_centerHorizontal="true"-->
    <!--        android:layout_height="150dp"-->
    <!--        android:src="@drawable/avatar"-->
    <!--        app:civ_border_color="@color/green"-->
    <!--        app:civ_border_width="1dp" />-->

    <EditText
        android:id="@+id/createSupervisorProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createSupervisorProfileTitle"
        android:layout_marginTop="50dp"
        android:autofillHints="name"
        android:backgroundTint="@color/green"
        android:hint="@string/your_name"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/createSupervisorProfileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/createSupervisorProfileName"
        android:layout_marginTop="20dp"
        android:autofillHints="emailAddress"
        android:backgroundTint="@color/green"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:maxLines="1"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/createSupervisorProfilePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/createSupervisorProfileEmail"
        android:layout_marginTop="20dp"
        android:autofillHints="phone"
        android:backgroundTint="@color/green"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLength="11"
        android:maxLines="1"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/createSupervisorProfilePhone"
        android:layout_marginTop="20dp"
        android:background="@drawable/line_border"
        android:hint="@string/area_of_expertise"
        app:boxStrokeColor="@color/green"
        app:boxStrokeWidth="0dp">

        <AutoCompleteTextView
            android:id="@+id/createSupervisorProfileArea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/createSupervisorProfileCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/category"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:text="@string/create_profile"
        android:textColor="@color/white" />

</RelativeLayout>