<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/mainIcon"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icons" />

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainIcon"
        android:layout_centerHorizontal="true"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/darkGreen"
        android:textSize="40sp" />

    <Button
        android:id="@+id/mainStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainTitle"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/darkGreen"
        android:text="@string/student"
        android:textSize="24sp" />

    <Button
        android:id="@+id/mainSupervisor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainStudent"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/darkGreen"
        android:text="@string/supervisor"
        android:textSize="24sp" />

    <Button
        android:id="@+id/mainCoordinator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainSupervisor"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/darkGreen"
        android:text="@string/proceed_as_coordinator"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/atachiz02_softwares"
        android:textColor="@color/darkGreen"
        android:textSize="14sp" />

</RelativeLayout>