<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.CreateStudentProfileActivity">

    <TextView
        android:id="@+id/createProfileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/create_your_profile"
        android:textColor="@color/darkGreen"
        android:textSize="30sp" />

    <!--    <de.hdodenhof.circleimageview.CircleImageView-->
    <!--        android:id="@+id/createProfileProfilePic"-->
    <!--        android:layout_width="100dp"-->
    <!--        android:layout_centerHorizontal="true"-->
    <!--        android:layout_height="150dp"-->
    <!--        android:src="@drawable/avatar"-->
    <!--        app:civ_border_color="@color/green"-->
    <!--        app:civ_border_width="1dp" />-->

    <androidx.core.widget.NestedScrollView
        android:id="@+id/createProfileScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/createProfileTitle"
        android:layout_marginTop="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/createProfileID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="username"
                android:backgroundTint="@color/green"
                android:hint="@string/id_number"
                android:inputType="textAutoComplete"
                android:maxLines="1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/createProfileEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/createProfileID"
                android:layout_marginTop="10dp"
                android:autofillHints="emailAddress"
                android:backgroundTint="@color/green"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/createProfileFirstProjectName"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="10dp"
                android:layout_below="@id/createProfileEmail"
                android:layout_marginTop="30dp"
                android:background="@drawable/line_border"
                android:hint="@string/_1st_proposed_project_topic"
                android:inputType="textMultiLine" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/categoryOne"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/createProfileFirstProjectName"
                android:layout_marginTop="10dp"
                android:background="@drawable/line_border"
                android:hint="@string/_1st_project_area_of_interest"
                app:boxStrokeColor="@color/green"
                app:boxStrokeWidth="0dp">

                <AutoCompleteTextView
                    android:id="@+id/createProfileFirstProjectArea"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/createProfileSecondProjectName"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="10dp"
                android:layout_below="@id/categoryOne"
                android:layout_marginTop="30dp"
                android:background="@drawable/line_border"
                android:hint="@string/_2nd_proposed_project_topic"
                android:inputType="textMultiLine" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/categoryTwo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/createProfileSecondProjectName"
                android:layout_marginTop="10dp"
                android:background="@drawable/line_border"
                android:hint="@string/_2nd_project_area_of_interest"
                app:boxStrokeColor="@color/green"
                app:boxStrokeWidth="0dp">

                <AutoCompleteTextView
                    android:id="@+id/createProfileSecondProjectArea"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/createProfileThirdProjectName"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@id/categoryTwo"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:background="@drawable/line_border"
                android:hint="@string/_3rd_proposed_project_topic"
                android:inputType="textMultiLine" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/categoryThree"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/createProfileThirdProjectName"
                android:layout_marginTop="10dp"
                android:background="@drawable/line_border"
                android:hint="@string/_3rd_project_area_of_interest"
                app:boxStrokeColor="@color/green"
                app:boxStrokeWidth="0dp">

                <AutoCompleteTextView
                    android:id="@+id/createProfileThirdProjectArea"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/createProfileGrouping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/categoryThree"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/createProfileAlone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:buttonTint="@color/green"
                    android:text="@string/working_alone"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/createProfileGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:buttonTint="@color/green"
                    android:text="@string/working_in_group"
                    android:textSize="14sp" />
            </RadioGroup>

            <Button
                android:id="@+id/createProfileCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/createProfileGrouping"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:text="@string/create_profile"
                android:textColor="@color/white" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>